--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@vercel/og": "^0.8.5",
     "ai": "^4.3.19",
     "next": "^15.3.0",
     "react": "^19.1.0",
